@@ -107,6 +107,7 @@
 - [ ] Maybe add Analytics/Adsense ?
 - [ ] Place other social network buttons (addthis/flattr)
 ***** TODO Handle unit tests
+      CLOCK: [2016-09-01 jeu. 05:19]--[2016-09-01 jeu. 05:29] =>  0:10
       CLOCK: [2016-09-01 jeu. 04:14]--[2016-09-01 jeu. 04:45] =>  0:31
       CLOCK: [2016-08-31 mer. 21:50]--[2016-08-31 mer. 22:20] =>  0:30
 - [X] Implement a simple unit test
@@ -118,9 +119,13 @@
   - [-] run it on travis-ci
   - [X] Link unit tests with `make check`
   - [X] Make travis run them
-- [ ] Got segfault in unit tests
+- [X] Got segfault in unit tests (but work with travis-ci)
 - [ ] See why librainbrurpg-logger.so is a shared lib. while 
   librainbrurpg-services.a is a static one
+  To locally test for clang build : Works locally.
+export CC=/usr/bin/clang
+export CXX=/usr/bin/clang++
+  It seems an incompatibility with clang and c++11
 ***** DONE Trying cmake as a global build system
       CLOCK: [2016-08-18 jeu. 02:24]--[2016-08-18 jeu. 02:32] =>  0:08
       CLOCK: [2016-08-18 jeu. 01:36]--[2016-08-18 jeu. 02:14] =>  0:38
